[gd_scene load_steps=13 format=3 uid="uid://bj3hmcmc1326q"]

[ext_resource type="Script" path="res://Enemy/boss/bossBeam.gd" id="1_6hl0p"]
[ext_resource type="Texture2D" uid="uid://3n2ohkv8p2kg" path="res://Assets/bossDillion/orb.png" id="2_uku8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3jih"]
size = Vector2(62, 299)

[sub_resource type="Gradient" id="Gradient_w8b82"]
offsets = PackedFloat32Array(0.00108578, 0.271444, 0.597177)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tva18"]
gradient = SubResource("Gradient_w8b82")

[sub_resource type="Curve" id="Curve_l5ipf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_54l8o"]
curve = SubResource("Curve_l5ipf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5f0ke"]
particle_flag_disable_z = true
initial_velocity_min = 20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_54l8o")
color_ramp = SubResource("GradientTexture1D_tva18")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g6soo"]
particle_flag_disable_z = true
initial_velocity_min = 40.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_54l8o")
color_ramp = SubResource("GradientTexture1D_tva18")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_36co2"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 98, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0

[sub_resource type="Environment" id="Environment_au0on"]
background_mode = 3
glow_enabled = true
glow_levels/4 = 0.89
glow_intensity = 0.5
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5ynw"]
size = Vector2(20, 80)

[node name="RayCast2D" type="RayCast2D"]
target_position = Vector2(999999, 50)
script = ExtResource("1_6hl0p")

[node name="Line2D" type="Line2D" parent="."]
show_behind_parent = true
points = PackedVector2Array(0, 0, 656, 0)
width = 2000.0
default_color = Color(0, 0.951816, 0.993499, 0.878431)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3863, 2)
shape = SubResource("RectangleShape2D_r3jih")
one_way_collision_margin = 80.0

[node name="CastingParticles" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_5f0ke")
texture = ExtResource("2_uku8g")
lifetime = 0.3
trail_lifetime = 0.65

[node name="CollisionParticles2" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_g6soo")
texture = ExtResource("2_uku8g")
lifetime = 0.3
trail_lifetime = 0.65

[node name="BeamParticle2D" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_36co2")
texture = ExtResource("2_uku8g")
lifetime = 0.3
draw_order = 0
trail_lifetime = 0.65

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_au0on")

[node name="Area2D" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_c5ynw")
